--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "type": "git",
     "url": "git+https://github.com/forsigner/node-pngdefry.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "commander": "^2.9.0"
+  },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "eslint": "^1.10.3"
@@ -31,6 +33,9 @@
   },
   "scripts": {
     "postinstall": "node postinstall.js"
+  },
+  "bin": {
+    "pngdefry": "./bin/pngdefry.js"
   },
   "bugs": {
     "url": "https://github.com/forsigner/node-pngdefry/issues"
