--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,5 @@
 {
     "preset": "airbnb",
     "requireTrailingComma": false,
-    "safeContextKeyword": ["vm", "that"]
+    "safeContextKeyword": []
 }
