--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "bin/pngdefry.js",
     "postinstall.js"
   ],
-  "engines": {
-    "node": ">= 0.8.0"
-  },
   "scripts": {
+    "test": "mocha",
     "postinstall": "node postinstall.js"
   },
   "bin": {
