--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "eslint": "^1.10.3",
+    "mmmagic": "^0.4.1",
     "rewire": "^2.5.1",
     "should": "^8.2.0"
   },
