--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: node_js
 node_js:
   - 'stable'
@@ -7,10 +6,12 @@ node_js:
 addons:
   apt:
     sources:
-    - ubuntu-toolchain-r-test
+      - ubuntu-toolchain-r-test
     packages:
-    - g++-4.8
+      - gcc-4.9
+      - g++-4.9
 before_install:
   - npm install node-gyp -g
+  - export CC="gcc-4.9" CXX="g++-4.9"
 before_script:
   - npm install -g mocha
